overflow fix

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,7 +1,7 @@
 .App{
   display: flex;
   align-items: stretch;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 }
 
